--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -10,19 +11,19 @@
     <div id="game-container" class="col-md-8 col-md-offset-2">
       <div id="game-board" class="col-md-12">
         <div class="row">
-          <div id="upper-left" class="col-md-4 board-square">upper left</div>
-          <div id="upper-center" class="col-md-4 board-square">upper center</div>
-          <div id="upper-right" class="col-md-4 board-square">upper right</div>
+          <div id="upper-left" class="col-md-2 board-square"><i class="fa fa-times icon-size"></i></div>
+          <div id="upper-center" class="col-md-2 board-square"><i class="fa fa-circle-o icon-size"></i></div>
+          <div id="upper-right" class="col-md-2 board-square"><i class="fa fa-circle-o icon-size"></i></div>
         </div>
         <div class="row">
-          <div id="middle-left" class="col-md-4 board-square">middle left</div>
-          <div id="middle-center" class="col-md-4 board-square">middle center</div>
-          <div id="middle-right" class="col-md-4 board-square">middle right</div>
+          <div id="middle-left" class="col-md-2 board-square"></div>
+          <div id="middle-center" class="col-md-2 board-square"></div>
+          <div id="middle-right" class="col-md-2 board-square"><i class="fa fa-circle-o icon-size"></i></div>
         </div>
         <div class="row">
-          <div id="bottom-left" class="col-md-4 board-square">bottom left</div>
-          <div id="bottom-center" class="col-md-4 board-square">bottom center</div>
-          <div id="bottom-right" class="col-md-4 board-square">bottom right</div>
+          <div id="bottom-left" class="col-md-2 board-square"><i class="fa fa-times icon-size"></i></div>
+          <div id="bottom-center" class="col-md-2 board-square"><i class="fa fa-circle-o icon-size"></i></div>
+          <div id="bottom-right" class="col-md-2 board-square"></div>
         </div>
       </div>
     </div>
