--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
         <div class="row">
           <div id="bottom-left" class="col-md-2 board-square"><i class="fa fa-times icon-size"></i></div>
           <div id="bottom-center" class="col-md-2 board-square"><i class="fa fa-circle-o icon-size"></i></div>
-          <div id="bottom-right" class="col-md-2 board-square"><i class="fa fa-times icon-size"></div>
+          <div id="bottom-right" class="col-md-2 board-square"></div>
         </div>
       </div>
     </div>
